# dotfiles

./: .bashrc  .chezmoiexternal.toml  .chezmoiignore  .gitmodules  .profile  .tmux.conf  .xinitrc  .zprofile  .zshrc  README  README.md  dot_bashrc  dot_customized.gitconfig  dot_tmux.conf  dot_zprofile
.chezmoitemplates/: macos-app-update-script
.clojure/: deps.edn
.config/alacritty/: alacritty.yml
.config/bat/: config
.config/bspwm/: bspwmrc
.config/dunst/: dunstrc
.config/fish/: config.fish  fish_variables
.config/fish/completions/: xbps-remove.fish
.config/fish/conf.d/: asdf.fish  nvim.fish
.config/fish/functions/: config.fish  fish_user_key_bindings.fish  gradlew.fish  vi.fish
.config/htop/: htoprc
.config/i3/: config
.config/kitty/: kitty.conf
.config/mpv/: input.conf  mpv.conf
.config/networkmanager-dmenu/: config.ini
.config/nvim/: .gitignore  .luarc.json  coc-settings.json  init.lua  init.vim  lazy-lock.json  vimrc.vim
.config/nvim/config/: clojure.vim  default.vim  elm.vim  haskell.vim  js.vim  julia.vim
.config/nvim/ftplugin/: xxd.vim
.config/nvim/lua/config/: lazy.lua  options.lua
.config/nvim/lua/plugins/: colorscheme.lua  debug.lua  editor.lua  lsp.lua  misc.lua  statusline.lua  tree.lua
.config/polybar/: config  music.sh  np.py  test.sh  xmonad_dbus.py
.config/qutebrowser/: .gitignore  config.py  quickmarks
.config/qutebrowser/bookmarks/: urls
.config/qutebrowser/pyconfig/: redirectors.py
.config/qutebrowser/userscripts/: readability  view-in-mpv  view_in_mpv
.config/rofi/: networkbar.rasi
.config/sv/: .gitignore
.config/sv/blueman-applet/: run
.config/sv/blueman-applet/log/: run
.config/sv/clipmenud/: run
.config/sv/clipmenud/log/: run
.config/sv/polybar/: run
.config/sv/polybar/log/: run
.config/sv/template/: run
.config/sv/template/log/: run
.config/sxhkd/: sxhkdrc
.config/systemd/user/: .gitignore  blueberry.service  cmst.service  dunst.service  jetbrains-toolbox.service  nm-applet.service  polybar.service  status-notifier-watcher.service  taffybar.service  udiskie.service  wallpaper.service
.config/taffybar/: my-taffybar.cabal  ppichler-taffybar.cabal  stack.yaml  taffybar  taffybar.css  taffybar.hs
.config/termite/: config
.local/share/qutebrowser/userscripts/: custom.css  print.css  qute-gopass  readability  send-to-remarkable
.resources/: setup.md
.resources/cheatsheets/: edit_pgp_mail.md
.resources/scripts/: noctrlq.sh  termite-wrapper.sh
.xmonad/: build  ppichler-xmonad.cabal  stack.yaml  start.sh  xmonad.hs
.xmonad/src/: PolybarHints.hs
dot_config/alacritty/: alacritty.yml
dot_config/bat/: config
dot_config/fish/: config.fish
dot_config/fish/completions/: xbps-install.fish  xbps-reconfigure.fish
dot_config/fish/conf.d/: autojump.fish  update_theme.fish
dot_config/fish/functions/: edit-nvim-config.fish  fish_user_key_bindings.fish  fzf_key_bindings.fish  gss.fish  nvim.fish  ssh.fish  theme.fish  vim.fish
dot_config/ghostty/: config
dot_config/htop/: htoprc
dot_config/kitty/: kitty.conf
dot_config/linearmouse/: linearmouse.json
dot_config/mpv/: mpv.conf
dot_config/nvim/: init.lua  lazy-lock.json
dot_config/nvim/ftdetect/: bpftrace.lua  gitconfig.lua  helm.lua  jenkins.lua  starlark.lua  templ.lua  terraform.lua
dot_config/nvim/lua/config/: autocmd.lua  autocmds.lua  autocolor.lua  commands.lua  diagnostics.lua  keymaps.lua  lazy.lua  options.lua
dot_config/nvim/lua/config/plugins/: autocolor.lua
dot_config/nvim/lua/plugins/: ai.lua  colorscheme.lua  completion.lua  debug.lua  editor.lua  git.lua  lsp.lua  misc.lua  noice.lua  snacks.lua  statusline.lua  telescope.lua  test.lua  tree.lua  treesitter.lua
dot_config/nvim/snippets/: all.lua
dot_config/qutebrowser/: config.py
dot_config/qutebrowser/bookmarks/: urls
dot_config/rofi/: networkbar.rasi
dot_config/wezterm/: dot_neoconf.json  wezterm.lua
dot_config/zellij/: config.kdl
dot_hammerspoon/: cmd_h_handling.lua  debouncer.lua  dot_neoconf.json  init.lua  theme_detection.lua
dot_local/share/qutebrowser/userscripts/: custom.css  print.css  qute-gopass  readability
dot_macapps/: alt-tab.xml  run_onchange_alt-tab-defaults.sh.tmpl
