name:                ppichler-xmonad
version:             0.1.0.0
synopsis:            Patrick Pichlers xmonad configuration.
homepage:            
license:             GPL-3
license-file:        LICENSE
author:              Patrick Pichler
maintainer:          
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable ppichler-xmonad
  main-is:            xmonad.hs
  build-depends:      X11>=1.8
                    , aeson>=0.11.2.1
                    , base >=4.10
                    , bytestring>=0.10.8.1
                    , containers>=0.5.7.1
                    , directory>=1.2.6.2
                    , filepath>=1.4.1.0
                    , gtk-traymanager>=0.1.6
                    , hostname>=1.0
                    , mtl>=2.2.1
                    , multimap>=1.2.1
                    , process>=1.4.3.0
                    , split
                    , taffybar>=2.0
                    , transformers>=0.5.2.0
                    , utf8-string
                    , data-default
                    , xmonad-contrib>=0.13
                    , xmonad>=0.13
  hs-source-dirs:      .
  default-language:     Haskell2010
