name:                ppichler-xmonad
version:             0.1.0.0
synopsis:            Patrick Pichlers xmonad configuration.
homepage:            
license:             GPL-3
license-file:        LICENSE
author:              Patrick Pichler
maintainer:          
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:            xmonad.hs
  build-depends:      base
                     , X11>=1.8
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , github
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hslogger
                     , process
                     , split
                     , taffybar
                     , transformers
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
  hs-source-dirs:      .
  default-language:     Haskell2010
