name:                my-taffybar
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable my-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gtk-strut
                     , github
                     , gi-gtk
                     , glib
                     , gtk3>=0.14.8
                     , gtk-sni-tray
                     , hslogger
                     , mtl
                     , haskell-gi-base
                     , process
                     , split
                     , taffybar
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
                     , X11>=1.8
  default-language:    Haskell2010
