name:                my-taffybar
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable my-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , X11>=1.8
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , github
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hslogger
                     , process
                     , split
                     , taffybar
                     , transformers
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
  default-language:    Haskell2010
